# scapi-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml  scapi.py
.github/workflows/: lint-and-precommit.yml  publish.yml  test.yml
tests/: test_scapi.py
