[project]
name = "scapi"
version = "0.2.3"
description = "Dead simple, self-contained, single-file API load testing tool built on FastAPI."
readme = "README.md"
authors = [{ name = "Sergey Silaev", email = "hello@8am.dev" }]
requires-python = ">=3.10"
keywords = [
    "python",
    "api",
    "load",
    "testing",
    "single-file",
    "tool",
    "fastapi",
    "python310",
    "python311",
    "python312",
]

dependencies = [
   "uvicorn>=0.32.0",
   "fastapi>=0.115.4",
   "structlog>=24.4.0",
   "httpx>=0.27.2",
   "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pyupgrade>=3.19.0",
    "coverage>=7.6.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.1",
]

[tool.coverage.run]
data_file = "coverage/coverage"
parallel = true
branch = true

[tool.coverage.report]
skip_covered = true
skip_empty = true
omit = ["./tests/*.py"]
