[project]
name = "scapi-py"
version = "0.2.5"
description = "Dead simple, self-contained, single-file API load testing tool built on FastAPI."
readme = "README.md"
authors = [{ name = "Sergey Silaev", email = "hello@8am.dev" }]
requires-python = ">=3.12"
keywords = [
    "python",
    "api",
    "load",
    "testing",
    "single-file",
    "tool",
    "fastapi",
    "python312",
    "python313",
]

dependencies = [
    "fastapi==0.115.11",
    "httpx==0.28.1",
    "structlog==25.1.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "pyupgrade>=3.19.0",
    "ruff>=0.7.1",
]

[tool.coverage.run]
data_file = "coverage/coverage"
parallel = true
branch = true

[tool.coverage.report]
skip_covered = true
skip_empty = true
omit = ["./tests/*.py"]
